src/tests/snapshots/gitu__tests__show_refs__show_refs_at_local_branch.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌* main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
 Tags                                                                           |
   main                                                                         |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 2ce33495ebdcc656
