src/tests/snapshots/gitu__tests__show_refs__show_refs_at_tag.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌? main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
 ? origin/main                                                                  |
                                                                                |
 Tags                                                                           |
 ? v1.0                                                                         |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 2ce33495ebdcc656
