src/tests/snapshots/gitu__tests__show_refs__show_refs_with_remote_tracking_ref_without_remote.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌Branches                                                                       |
▌* main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 23e139cddc801205
